Added additional UI elements to homepage

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,8 +3,11 @@
     <title>Maple Donut</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/style.css">
+    <script src="https://kit.fontawesome.com/c13290656a.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+
 <div class="wrapper">
     <div class="sidebar">
         <div class="row justify-content-center">
@@ -14,23 +17,32 @@
                 </div>
             </div>
         </div>
-
-        <h2> Username </h2>
-        <h3> Biography </h3>
-        
-        <hr>
         <ul>
-            <li><a href="#"><i class="fas fa-home"></i>HOME</a></li>
-            <li><a href="#"><i class="fas fa-courses"></i>Courses</a></li>
-            <li><a href="#"><i class="fas fa-questions"></i>Questions</a></li>
-            <li><a href="#"><i class="fas fa-professors"></i>Professors</a></li>
-            <li><a href="#"><i class="fas fa-discussions"></i>Discussions</a></li>
+            <h2> Username </h2>
+            <h3> Biography </h3>
         </ul>
         <hr>
+        <ul>
+            <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
+            <li><a href="#"><i class="fas fa-book"></i>Courses</a></li>
+            <li><a href="#"><i class="fas fa-question-circle"></i>Questions</a></li>
+            <li><a href="#"><i class="fas fa-chalkboard-teacher"></i>Professors</a></li>
+            <li><a href="#"><i class="fas fa-comments"></i>Discussions</a></li>
+        </ul>
+        <hr>
+        <ul>
+            <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
+            <li><a href="#"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
+        </ul>
     </div>
     <div class="main_content">
-        <div class="header">HEADER TEST 123</div>
+        <div class="header">
+            <div class="row justify-content-center">
+                <h2>Home</h2>
+            </div>
+        </div>
     </div>
 </div>
+
 </body>
 </html>
