Add login screen
Basic login screen with Maple colours.
Changed one line in index.html so Logout button goes to Login screen.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -32,7 +32,7 @@
         <hr>
         <ul>
             <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
-            <li><a href="#"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
+            <li><a href="login.html"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
         </ul>
     </div>
     <div class="main_content">
