Added additional pages

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="d-flex justify-content-center">
-    <img src="img/maple-donut.png" class="rotate" width="300" height="300" />
+    <img src="img/donut.png" width="300" height="300" />
 </div>
 
 <footer class="py-4 footer">
