--- a/HTML/discussions.html
+++ b/HTML/discussions.html
@@ -2,13 +2,13 @@
 <head>
     <title>Maple Donut</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/discussions.css">
     <script src="https://kit.fontawesome.com/c13290656a.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
 
 <div class="wrapper">
+    <!-- Side Bar -->
     <div class="sidebar">
         <div class="row justify-content-center">
             <div class="profile">
@@ -22,6 +22,7 @@
             <h3> Biography </h3>
         </ul>
         <hr>
+        <!--SIDE MAIN MENU BUTTONS-->
         <ul>
             <li><a href="#"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-book"></i>Courses</a></li>
@@ -30,6 +31,7 @@
             <li><a href="#"><i class="fas fa-comments"></i>Discussions</a></li>
         </ul>
         <hr>
+        <!--SIDE MENU OPTION BUTTONS-->
         <ul>
             <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
             <li><a href="login.html"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
@@ -38,7 +40,7 @@
     <div class="main_content">
         <div class="header">
             <div class="row justify-content-center">
-                <h2>Home</h2>
+                <h2>Discussions</h2>
             </div>
         </div>
     </div>
