Changed Login Page and Home Page

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -1,55 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Maple Donut Login</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../CSS/login-page.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Maple Donut Login</title>
+    <!-- CSS BOOTSTRAP LINK -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <!-- CUSTOM CSS LINK -->
+    <link rel="stylesheet" href="../CSS/login-page.css">
+   
 </head>
 
 <body>
-
-<div class="jumbotron jumbotron-fluid">
-  <h1>Welcome to Maple Donut!</h1>
-  <p>A brand new, student made solution for quick and easy interacting with
-    your current teachers, academic advisors, and not to mention your 
-    fellow peers! Have a coffee, enjoy a maple donut, and talk to your
-    professors about astrophysics or your advisors about your constantly
-    declining mental stability!</p> 
-</div>
-
-<div class="d-flex justify-content-center">
-    <form>
-        <div class="form-group">
-            <label for="example-input-email">School email address</label>
-            <input type="email" class="form-control" id="example-input-email"
-                aria-describedby="emailHelp" placeholder="Email">
-            <small id="emailHelp" class="form-text text-muted">Note: Email  and password will
-                be the same as your MacEwan school account.
-            </small>
-        </div>
-        <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-</div>
-
-<div class="d-flex justify-content-center">
-    <img src="img/donut.png" width="300" height="300" />
-</div>
-
-<footer class="py-4 footer">
-    <div class="container text-center">
-      <small>This project is a student project in progress inspired by the difficulty of meeting
-        with professors and academic advisors due to the recent and ongoing COVID-19
-        pandemic. Thank you for your understanding and support.</small>
+    <div class="background-image"></div>
+    <div class="loginBox">
+        <img src="img/donut.png" class="rotate" id="avatar">
+        <h2 class="text-center">Maple Donut</h2>
+        <h3 class="text-center">Login</h3>
+        <form>
+            <p>Username</p>
+            <input type="text" name="" placeholder="Enter Username">
+            <p>Password</p>
+            <input type="password" name="" placeholder="Enter Password">
+            <input type="submit" name="" value="Login">
+        </form>
     </div>
-</footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </body>
 </html>
