Updated all pages

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,7 +10,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <!-- CUSTOM CSS LINK -->
     <link rel="stylesheet" href="../CSS/login-page.css">
-   
 </head>
 
 <body>
@@ -21,10 +20,10 @@
         <h3 class="text-center">Login</h3>
         <form>
             <p>Username</p>
-            <input type="text" name="" placeholder="Enter Username">
+            <input type="text" name="" placeholder="">
             <p>Password</p>
-            <input type="password" name="" placeholder="Enter Password">
-            <input type="submit" name="" value="Login">
+            <input type="password" name="" placeholder="">
+            <input type="submit" name="" value="Login" onClick="home.html">
         </form>
     </div>
 
