--- a/HTML/courses.html
+++ b/HTML/courses.html
@@ -43,7 +43,7 @@
             </ul>
             <hr>
             <ul class="list-unstyled components">
-                <li><a href="#"><i class="fas fa-cog"></i>Settings</a></li>
+                <li><a href="settings.html"><i class="fas fa-cog"></i>Settings</a></li>
                 <li><a href="login.html"><i class="fas fa-sign-out-alt"></i>Logout</a></li>
             </ul>
         </nav>
