Add Question Ask Page, Question Success Page
Added two new pages, finishing up the general question process for now.

--- a/HTML/questions.html
+++ b/HTML/questions.html
@@ -67,8 +67,8 @@
                     <h2 class="text-center">Have a question? We'll try to find an answer!</h2>
                     <div class="input-group">
                         <input class="form-control py-2 border-right-0 border" type="search" value="Input your question here!" id="searchInput">
-                        <span class="input-group-append">
-                          <button class="btn btn-outline-secondary border-left-0 border" type="button" href="#">
+                        <span class="input-group-append" onclick="window.location.href='questions_ask.html';">
+                          <button class="btn btn-outline-secondary border-left-0 border" type="button">
                                 <i class="fa fa-search"></i>
                           </button>
                         </span>
